<resources>
    <string name="app_name">Suzuki Bangladesh</string>
    <string name="auth_key">9736fd0b8c4dfd2964acbfb31d24eed3</string>
    <string name="user_id">0</string>
    <string name="txt_suzuki">SUZUKI</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_pass_missmatch">This Verified Password Miss Match</string>
    <string name="error_invalid_msdin">This Mobile Number is invalid</string>
    <string name="error_invalid_amount">Your 0 amount is invalid</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="error_no_internet">No internet connection. Please active your internet and try again.</string>
    <string name="error_sever_connection">Failed to fetch data! Please try again.</string>

     <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <!--<string name="gcm_defaultSenderId">880658290830</string>-->
    <string name="gcm_defaultSenderId">448016797152</string>
    <string name="search_by_district_name">    Search by District name</string>
    <string name="search_by_locations">    Search locations</string>
    <string name="title_activity_maps">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="str_next">Next</string>
    <string name="my_bike_btn_txt">MY BIKE</string>
    <string name="spare_parts_btn_txt">SPARE PARTS</string>
    <string name="request_services_btn_txt">REQUEST SERVICES</string>
    <string name="news_events_btn_txt"><![CDATA[NEWS & EVENTS]]></string>
    <string name="promotion_btn_txt">Promotion</string>
    <string name="invite_friends_btn_txt">INVITE FRIENDS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sos_value">+8801755662288</string>
    <string name="facebook_page_address">http://www.facebook.com/suzukibd/</string>
    <string name="facebook_url_schemes">fb://page/768137996607819</string>
    <string name="share_using">Share Using</string>

    <string name="qty_txt">QTY</string>
    <string name="item_txt">ITEM</string>
    <string name="price_txt">PRICE</string>
    <string name="subtotal_txt">Sub Total</string>
    <string name="total_with_vat_txt">Total (inc VAT)</string>
    <string name="pay_with">PAY WITH</string>
    <string name="no_items_display_txt">No Item Found</string>
    <string name="txt_delivery_charge">Delivery Charge</string>
    <string name="delivery_inside_dhaka_price">120</string>
    <string name="delivery_outside_dhaka_price">150</string>
    <string name="picup_delivery_text">After your order has been confirmed a customer service representative will call and update you with the nearest pickup point. Thank you.</string>

    <string name="text_accept_bkash">We accept bKash payment</string>
    <string name="text_access_bkash">Access bKash system from own bKash wallet</string>
    <string name="text_bkash_step1">Step 1 : Select 3.payment</string>
    <string name="text_bkash_step2">Step 2 : Merchant bKash wallet no. 01787681201</string>
    <string name="text_bkash_step3">Step 3 : Enter amount : Total Price (Such as 190)</string>
    <string name="text_bkash_step4">Step 4 : Enter Reference : Customer\'s Personal Mobile Number</string>
    <string name="text_bkash_step5">Step 5 : Enter Counter No. 1</string>
    <string name="text_bkash_ok">Then ok</string>
    <string name="text_bkash_rec_trx">You will receive a payment confirmation SMS with</string>
    <string name="text_bkash_trx">TrxID</string>

    <string-array name="navigation_drawer_items_array">
        <item>Home</item>
        <item>My Bike</item>
        <item>Spare Parts</item>
        <item>Request For Service</item>
        <item>News And Events</item>
        <item>Promotions</item>
        <item>Quiz</item>
        <item>SOS</item>
        <item>Invite Friends</item>
        <item>Social Media</item>
        <item>Change Password</item>
        <!--item>FORGOT PASSWORD</item>
        <item>SIGNUP</item-->
        <item>Login</item>
        <item>Logout</item>

    </string-array>
</resources>
