<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="20dp">

    <RelativeLayout
        android:id="@+id/payment_mother_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/layout_image_bkash">
            <ImageView
                android:id="@+id/bkash_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:paddingTop="3dp"
                android:src="@drawable/bkash_logo"
                android:visibility="visible" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_below="@+id/layout_image_bkash"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="visible" >

            <RelativeLayout
                android:id="@+id/first_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/text_accept_bkash"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/text_accept_bkash"
                    android:textSize="12dp"
                    android:visibility="visible" />


                <TextView
                    android:id="@+id/text_access_bkash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_accept_bkash"
                    android:gravity="left"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/text_access_bkash"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/text_bkash_step1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_access_bkash"
                    android:gravity="left"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/text_bkash_step1"
                    android:textSize="12dp" />


                <TextView
                    android:id="@+id/text_bkash_step2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_bkash_step1"
                    android:gravity="left"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/text_bkash_step2"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/text_bkash_step3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_bkash_step2"
                    android:gravity="left"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/text_bkash_step3"
                    android:textSize="12dp" />
                <TextView
                    android:id="@+id/text_bkash_step4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_bkash_step3"
                    android:gravity="left"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/text_bkash_step4"
                    android:textSize="12dp" />
                <TextView
                    android:id="@+id/text_bkash_step5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_bkash_step4"
                    android:gravity="left"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/text_bkash_step5"
                    android:textSize="12dp" />
                <TextView
                    android:id="@+id/text_bkash_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_bkash_step5"
                    android:gravity="left"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/text_bkash_ok"
                    android:textSize="12dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/layout_bkash_receive"
                    android:layout_below="@+id/text_bkash_ok">
                    <TextView
                        android:id="@+id/text_bkash_rec_trx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_bkash_rec_trx"
                        android:textSize="12dp" />
                    <TextView
                        android:id="@+id/text_bkash_trx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/text_bkash_trx"
                        android:textSize="15dp"
                        android:textStyle="bold"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/layout_bkash_trx_no"
                    android:layout_below="@+id/layout_bkash_receive">
<!--                    <TextView
                        android:id="@+id/text_bkas_trxn_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Input TrxID"
                        android:textSize="14dp"
                        android:textStyle="bold"/>-->
                    <EditText
                        android:id="@+id/txt_trx_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="5dp"
                        android:hint="Enter your trxID"
                        android:inputType="number"
                        android:imeOptions="actionDone"/>

                    <Button
                        android:id="@+id/checkout_thisCart"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_trx_id"
                        android:text="Checkout"
                        android:textColor="@android:color/white"
                        android:background="@drawable/rounded_pay_method_btn"
                        android:textSize="18dp"
                        android:gravity="center"
                        android:textAlignment="gravity"/>

                </LinearLayout>



            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>


</RelativeLayout>