<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="40dp">

    <RelativeLayout
        android:id="@+id/shop_mother_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/shop_table_header"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/line_grey"
            android:visibility="visible" >

            <TextView
                android:id="@+id/Quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/qty_txt"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/Iteam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/Quantity"
                android:layout_alignBottom="@+id/Quantity"
                android:layout_marginLeft="55dp"
                android:layout_toRightOf="@+id/Quantity"
                android:text="@string/item_txt"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/Iteam"
                android:layout_alignBottom="@+id/Iteam"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:text="@string/price_txt"
                android:textStyle="bold"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/shop_table_header"
            android:visibility="visible" >

            <RelativeLayout
                android:id="@+id/other_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shop_table_header"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/textview_no_item_add_card"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:gravity="center"
                    android:text="@string/no_items_display_txt"
                    android:textSize="22dp"
                    android:visibility="visible" />

                <ListView
                    android:id="@+id/spare_parts_cardlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/textview_no_item_add_card"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="10dp"
                    android:scrollingCache="false"
                    android:animationCache="false"
                    android:smoothScrollbar="true" >
                </ListView>

                <View
                    android:id="@+id/view_under_spare_parts_cardlist"
                    android:layout_width="fill_parent"
                    android:layout_height="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/spare_parts_cardlist"
                    android:background="@android:color/transparent"
                    android:visibility="visible" />

                <RelativeLayout
                    android:id="@+id/spare_parts_table_footer"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/spare_parts_cardlist"
                    android:paddingBottom="5dp" >

                    <TextView
                        android:id="@+id/cart_totalPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/subtotal_tv"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:text=""
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/total_with_tax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/total_with_vat_tv"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:text=""
                        android:textSize="17sp" />



                    <View
                        android:id="@+id/description_event_view24"
                        android:layout_width="fill_parent"
                        android:layout_height="0.50dp"
                        android:layout_marginTop="0dp"
                        android:background="#2A385A" />

                    <TextView
                        android:id="@+id/subtotal_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/description_event_view24"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/subtotal_txt"
                        android:textSize="11sp" />

                    <View
                        android:id="@+id/description_event_view23"
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/subtotal_tv"
                        android:layout_marginTop="7dp"
                        android:background="#2A385A" />

                    <TextView
                        android:id="@+id/total_with_vat_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/description_event_view23"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="17dp"
                        android:text="@string/total_with_vat_txt"
                        android:textSize="13sp" />

                    <View
                        android:id="@+id/description_event_view22"
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/total_with_vat_tv"
                        android:layout_marginTop="7dp"
                        android:background="#2A385A" />

                    <Button
                        android:id="@+id/checkout_thisCart"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/description_event_view22"
                        android:layout_marginTop="25dp"
                        android:layout_marginLeft="100dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/mycart_pay_with_bkash"
                        android:text="@string/pay_with"
                        android:textColor="@android:color/black"
                        android:textSize="18dp"
                        android:gravity="center_vertical"
                        android:paddingTop="15dp"
                        android:paddingLeft="10dp"
                        android:textAlignment="gravity"/>

                </RelativeLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>


</RelativeLayout>